# MBG

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
MBG/: CMakeLists.txt  copy_assets.cmake  copy_shaders.cmake
MBG/MBG/OpenGL/: Command.hpp  CommandBuffer.cpp  CommandBuffer.hpp  DescriptorSets.hpp  DoubleTexture2D.hpp  DoubleTexture3D.hpp  FrameGraph.cpp  FrameGraph.hpp  Info.hpp  MBG.hpp  Nodes.hpp  RenderPass.cpp  RenderPass.hpp  Structs.hpp  Texture2D.hpp  Texture3D.cpp  Texture3D.hpp  Types.hpp  VertexBuffer.hpp  VertexElementBuffer.hpp  Window.cpp  Window.hpp
MBG/MBG/OpenGL/Memory/: DescriptorSetBuffer.hpp  ElementBuffer.hpp  IndirectDrawBuffer.hpp  InstancedElementBuffer.hpp  InstancedVertexBuffer.hpp  Texture2DArrayBuffer.hpp  Texture2DBuffer.hpp  Texture3DBuffer.hpp  TextureBuffer.hpp  TextureCubeMapBuffer.hpp  UniformBuffer.hpp  VertexBuffer.hpp
MBG/MBG/Tests/: tests.cpp
MBG/Tests/: tests.cpp
MBG/Tests/Assets/: Temp.txt
MBG/Tests/Shaders/: frag_3dtexture.glsl  frag_triangle.glsl  simple_triangle.glsl  vert_3dtexture.glsl  vert_triangle.glsl
